--- a/public/static/style.css
+++ b/public/static/style.css
@@ -41,6 +41,16 @@ header h1 {
     display: inline-block;
 }
 
+table {
+    border-collapse: collapse;
+    border: 2px solid #000;
+}
+
+th, td {
+    padding: 5px;
+    border: 2px solid #000;
+}
+
 #content {
     width: 850px;
     margin-left: auto;
@@ -74,8 +84,6 @@ header h1 {
 }
 
 #res_grid {
-    border-collapse: collapse;
-    border: 2px solid #000;
     background-color: #a6caf6;
 }
 
@@ -83,11 +91,6 @@ header h1 {
     font-size: 18pt;
     font-weight: bold;
     margin: 5px;
-}
-
-#res_grid th, td {
-    padding: 5px;
-    border: 2px solid #000;
 }
 
 .input_error {
